# cs2-dumper

./: Cargo.toml  LICENSE  README.md
output/: animationsystem_dll.cs  buttons.cs  client_dll.cs  engine2_dll.cs  host_dll.cs  info.json  interfaces.cs  interfaces.json  materialsystem2_dll.cs  networksystem_dll.cs  offsets.cs  offsets.json  panorama_dll.cs  particles_dll.cs  pulse_system_dll.cs  rendersystemdx11_dll.cs  resourcesystem_dll.cs  scenesystem_dll.cs  schemasystem_dll.cs  server_dll.cs  soundsystem_dll.cs  vphysics2_dll.cs  worldrenderer_dll.cs
src/: main.rs
src/output/: mod.rs
