[package]
name = "offsets"
version = "0.1.0-rework"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
simplelog = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
phf = { version = "0.11", features = ["macros"] }
pelite = "0.10.0"
memflow = { version = "0.2.0-alpha.6", features = ["plugins"] }
memflow-native = "0.2.0-alpha.6"
memoffset = "0.9"
heck = "0.5"
